Update image paths in index.html to fix loading issues

--- a/index.html
+++ b/index.html
@@ -3,13 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sorab Ka Dandurff</title>
 </head>
 <body>
-    <img src="product-container.jpg" alt="Product Container">
-    <div>
-        <!-- content -->
-    </div>
-    <img src="sourav.jpg" alt="Sourav">
+    <header>
+        <h1>Welcome to Sorab Ka Dandurff</h1>
+    </header>
+    <main>
+        <section>
+            <img src="product-container.jpg" alt="Product Container">
+        </section>
+        <section>
+            <img src="sourav.jpg" alt="Sourav">
+        </section>
+    </main>
 </body>
 </html>
